[project]
name = "openhti"
description = "Lightweight hardware test interface"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = ["pyjwt", "quart"]
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]

[project.optional-dependencies]
dev = ["black", "coverage"]
prod = ["uvicorn"]

[tool.setuptools.dynamic]
version = {attr = "openhti.__version__"}

[tool.coverage.run]
branch = true
source = ["openhti"]
omit = ["openhti/api/*"]